[gd_scene load_steps=5 format=3 uid="uid://def75rliqryb8"]

[ext_resource type="Script" path="res://core/campaign/item.gd" id="1_ly46s"]
[ext_resource type="Texture2D" uid="uid://nk4dltpj78pq" path="res://core/campaign/assets/Background.png" id="2_b6cf5"]
[ext_resource type="Texture2D" uid="uid://sohan0ioy6wf" path="res://core/campaign/assets/Coins3.png" id="3_3ydl6"]
[ext_resource type="Texture2D" uid="uid://dlotiyomi1h75" path="res://core/campaign/assets/Overlay.png" id="4_gnjgh"]

[node name="Item" type="Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -520.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ly46s")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource("2_b6cf5")
stretch_mode = 5

[node name="ItemNumber" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 37.0
offset_top = 17.0
offset_right = 61.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.349066
theme_override_colors/font_color = Color(0.798397, 0.663732, 0.0752777, 1)
text = "10"

[node name="ItemTexture" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("3_3ydl6")

[node name="Overlay" type="TextureRect" parent="Background"]
visible = false
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("4_gnjgh")

[node name="OverlayText" type="Label" parent="Background/Overlay"]
layout_mode = 2
offset_top = 48.0
offset_right = 128.0
offset_bottom = 80.0
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.801212, 0.785849, 0.763562, 1)
text = "Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"OverlayButton"

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
stretch_mode = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
